--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
   --color-secondary: #ec994b;
   --color-white: #fef9ff;
   --color-black: #000;
+  --color-green: #00a852;
+  --color-red: #ff5252;
 }
 
 *,
